# Telecom-RAG

./: .gitignore  Dockerfile  README.md  app.py  config.py  evaluate.py  helpers.py  ingest_faq.py  ingest_pdf.py  ingest_tickets.py  main.py  pyproject.toml  rag_chain.py  retriever.py
chroma_store/: chroma.sqlite3
data/: faq.csv
eval/: eval_set.json
tests/: test_helpers.py  test_ingest_loaders.py
