[project]
name = "rag-telecom-chatbot"
version = "0.2.0"
description = "RAG-based telecom customer care chatbot with conversation memory, reranking, and an eval harness"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-chroma>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-huggingface>=0.1",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "streamlit>=1.37",
    "fpdf2>=2.7",
    "pypdf>=4.0",
    "langchain-openai>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
